изменение БЭМ блоков

--- a/src/program.html
+++ b/src/program.html
@@ -80,10 +80,10 @@
                 <label class="text-field__label" for="age">Возраст&nbsp;(лет):</label>
               </div>
             </div>
-            <div class="radio">
-              <div class="radio__wrapper">
-                <div class="radio__inner">
-                  <label class="radio__label">
+            <div class="form__radio">
+              <div class="form__radio-wrapper">
+                <div class="form__radio-inner">
+                  <label class="radio">
                     <input
                       class="radio__input visually-hidden"
                       name="diet"
@@ -94,7 +94,7 @@
                     <span class="radio__custom"></span>
                     <span>похудение</span>
                   </label>
-                  <label class="radio__label">
+                  <label class="radio">
                     <input
                       class="radio__input visually-hidden"
                       name="diet"
@@ -104,7 +104,7 @@
                     <span class="radio__custom"></span>
                     <span>Набор массы</span>
                   </label>
-                  <label class="radio__label">
+                  <label class="radio">
                     <input
                       class="radio__input visually-hidden"
                       name="diet"
@@ -118,13 +118,13 @@
               </div>
             </div>
           </div>
-          <div class="contacts">
-            <div class="layout contacts__wrapper">
-              <h2 class="form__title contacts__title">
+          <div class="form__contacts">
+            <div class="layout form__contacts-wrapper">
+              <h2 class="form__title form__contacts-title">
                 Контактные данные (владельца кота)
               </h2>
-              <div class="contacts__inner">
-                <div class="text-field text-field--email contacts__box">
+              <div class="form__contacts-inner">
+                <div class="text-field text-field--email form__contacts-box">
                   <input
                     class="text-field__input text-field__input--contacts"
                     type="text"
@@ -134,7 +134,7 @@
                   />
                   <label class="text-field__label" for="email">E-&nbsp;mail:</label>
                 </div>
-                <div class="text-field text-field--phone contacts__box">
+                <div class="text-field text-field--phone form__contacts-box">
                   <input
                     class="text-field__input text-field__input--contacts"
                     type="text"
@@ -147,12 +147,12 @@
               </div>
             </div>
           </div>
-          <div class="comment">
-            <div class="layout comment__wrapper">
-              <h2 class="form__title comment__title">Комментарий</h2>
+          <div class="form__comment">
+            <div class="layout form__comment-wrapper">
+              <h2 class="form__title form__comment-title">Комментарий</h2>
               <label for="comment">
                 <textarea
-                  class="comment__field"
+                  class="form__comment-field"
                   name="comment"
                   id="comment"
                   cols="30"
@@ -162,11 +162,11 @@
               </label>
             </div>
           </div>
-          <div class="additional">
-            <div class="layout additional__wrapper">
-              <h2 class="form__title additional__title">Дополнительно</h2>
-              <ul class="additional__list">
-                <li class="additional__item">
+          <div class="form__additional">
+            <div class="layout form__additional-wrapper">
+              <h2 class="form__title form__additional-title">Дополнительно</h2>
+              <ul class="form__additional-list">
+                <li class="form__additional-item">
                   <div class="checkbox">
                     <input
                       class="checkbox__input visually-hidden"
@@ -195,7 +195,7 @@
                     </label>
                   </div>
                 </li>
-                <li class="additional__item">
+                <li class="form__additional-item">
                   <div class="checkbox">
                     <input
                       class="checkbox__input visually-hidden"
@@ -223,7 +223,7 @@
                     </label>
                   </div>
                 </li>
-                <li class="additional__item">
+                <li class="form__additional-item">
                   <div class="checkbox">
                     <input
                       class="checkbox__input visually-hidden"
@@ -251,7 +251,7 @@
                     </label>
                   </div>
                 </li>
-                <li class="additional__item">
+                <li class="form__additional-item">
                   <div class="checkbox">
                     <input
                       class="checkbox__input visually-hidden"
@@ -280,11 +280,11 @@
                   </div>
                 </li>
               </ul>
-              <div class="additional__box">
-                <button class="button additional__button" type="submit">
+              <div class="form__additional-box">
+                <button class="button form__button" type="submit">
                   отправить заявку
                 </button>
-                <span class="additional__info">* — Обязательные поля</span>
+                <span class="form__info">* — Обязательные поля</span>
               </div>
             </div>
           </div>
