--- a/src/catalog.html
+++ b/src/catalog.html
@@ -56,10 +56,19 @@
             <div class="card__inner">
               <picture>
                 <source
-                  srcset="img/product1_min-desktop.png"
+                  srcset="
+                    img/product1_min-desktop.png,
+                    img/product1_min-desktop@2x.png 2x
+                  "
                   media="(min-width: 1280px)"
                 />
-                <source srcset="img/product1_min-tablet.png" media="(min-width: 768px)" />
+                <source
+                  srcset="img/product1_min-tablet.png, img/product1_min-tablet@2x.png 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="img/product1_min-mobile.png, img/product1_min-mobile@2x.png 2x"
+                />
                 <img
                   class="card__picture"
                   src="img/product1_min-mobile.png"
@@ -93,14 +102,23 @@
             <div class="card__inner">
               <picture>
                 <source
-                  srcset="img/product1_max-desktop.png"
+                  srcset="
+                    img/product1_max-desktop.png,
+                    img/product1_max-desktop@2x.png 2x
+                  "
                   media="(min-width: 1280px)"
                 />
-                <source srcset="img/product1_max-tablet.png" media="(min-width: 768px)" />
+                <source
+                  srcset="img/product1_max-tablet.png, img/product1_max-tablet@2x.png 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="img/product1_max-mobile.png, img/product1_max-mobile@2x.png 2x"
+                />
                 <img
                   class="card__picture"
                   src="img/product1_max-mobile.png"
-                  alt="Cat Energy PRO 1000 г"
+                  alt="Cat Energy PRO 500 г"
                 />
               </picture>
 
@@ -129,10 +147,19 @@
             <div class="card__inner">
               <picture>
                 <source
-                  srcset="img/product2_min-desktop.png"
+                  srcset="
+                    img/product2_min-desktop.png,
+                    img/product2_min-desktop@2x.png 2x
+                  "
                   media="(min-width: 1280px)"
                 />
-                <source srcset="img/product2_min-tablet.png" media="(min-width: 768px)" />
+                <source
+                  srcset="img/product2_min-tablet.png, img/product2_min-tablet@2x.png 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="img/product2_min-mobile.png, img/product2_min-mobile@2x.png 2x"
+                />
                 <img
                   class="card__picture"
                   src="img/product2_min-mobile.png"
@@ -166,14 +193,23 @@
             <div class="card__inner">
               <picture>
                 <source
-                  srcset="img/product2_max-desktop.png"
+                  srcset="
+                    img/product2_max-desktop.png,
+                    img/product2_max-desktop@2x.png 2x
+                  "
                   media="(min-width: 1280px)"
                 />
-                <source srcset="img/product2_max-tablet.png" media="(min-width: 768px)" />
+                <source
+                  srcset="img/product2_max-tablet.png, img/product2_max-tablet@2x.png 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="img/product2_max-mobile.png, img/product2_max-mobile@2x.png 2x"
+                />
                 <img
                   class="card__picture"
                   src="img/product2_max-mobile.png"
-                  alt="Cat Energy PRO 1000 г"
+                  alt="Cat Energy PRO 500 г"
                 />
               </picture>
 
@@ -202,10 +238,19 @@
             <div class="card__inner">
               <picture>
                 <source
-                  srcset="img/product3_min-desktop.png"
+                  srcset="
+                    img/product3_min-desktop.png,
+                    img/product3_min-desktop@2x.png 2x
+                  "
                   media="(min-width: 1280px)"
                 />
-                <source srcset="img/product3_min-tablet.png" media="(min-width: 768px)" />
+                <source
+                  srcset="img/product3_min-tablet.png, img/product3_min-tablet@2x.png 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="img/product3_min-mobile.png, img/product3_min-mobile@2x.png 2x"
+                />
                 <img
                   class="card__picture"
                   src="img/product3_min-mobile.png"
@@ -239,14 +284,23 @@
             <div class="card__inner">
               <picture>
                 <source
-                  srcset="img/product3_max-desktop.png"
+                  srcset="
+                    img/product3_max-desktop.png,
+                    img/product3_max-desktop@2x.png 2x
+                  "
                   media="(min-width: 1280px)"
                 />
-                <source srcset="img/product3_max-tablet.png" media="(min-width: 768px)" />
+                <source
+                  srcset="img/product3_max-tablet.png, img/product3_max-tablet@2x.png 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="img/product3_max-mobile.png, img/product3_max-mobile@2x.png 2x"
+                />
                 <img
                   class="card__picture"
                   src="img/product3_max-mobile.png"
-                  alt="Cat Energy PRO 1000 г"
+                  alt="Cat Energy PRO 500 г"
                 />
               </picture>
 
@@ -275,10 +329,19 @@
             <div class="card__inner">
               <picture>
                 <source
-                  srcset="img/product4_min-desktop.png"
+                  srcset="
+                    img/product4_min-desktop.png,
+                    img/product4_min-desktop@2x.png 2x
+                  "
                   media="(min-width: 1280px)"
                 />
-                <source srcset="img/product4_min-tablet.png" media="(min-width: 768px)" />
+                <source
+                  srcset="img/product4_min-tablet.png, img/product4_min-tablet@2x.png 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="img/product4_min-mobile.png, img/product4_min-mobile@2x.png 2x"
+                />
                 <img
                   class="card__picture"
                   src="img/product4_min-mobile.png"
